[tool.poetry]
name = "ytvideodl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Kivy = "^2.0.0"
pytube3 = "^9.6.4"
pytube = "^10.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
